force-app/main/default/objects/dcp_Claim_Item__c/dcp_Claim_Item__c.object-meta.xml
<CustomObject>
    <description>Holds information about Claimed Items related to a Claim.</description>
    <label>Claim Item</label>
    <nameField>
        <label>Claim Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claim Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>