force-app/main/default/objects/dcp_Claim_Item__c/fields/dcp_Age__c.field-meta.xml
<CustomField>
    <fullName>dcp_Age__c</fullName>
    <description>Captures the Age of a Claimed Item</description>
    <label>Age</label>
    <length>40</length>
    <type>Text</type>
</CustomField>