force-app/main/default/objects/dcp_Claim_Item__c/fields/dcp_Case__c.field-meta.xml
<CustomField>
    <fullName>dcp_Case__c</fullName>
    <label>Case</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>Case.RecordType.Name</field>
            <operation>equals</operation>
            <value>Claim</value>
        </filterItems>
        <filterItems>
            <field>Case.RecordType.Name</field>
            <operation>equals</operation>
            <value>Complaint</value>
        </filterItems>
        <filterItems>
            <field>Case.RecordType.Name</field>
            <operation>equals</operation>
            <value>EVOW</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Claim Items</relationshipLabel>
    <relationshipName>Claim_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>