force-app/main/default/objects/dcp_Claim_Item__c/fields/dcp_Claim_Amount__c.field-meta.xml
<CustomField>
    <fullName>dcp_Claim_Amount__c</fullName>
    <description>Captures total Claimed Amount</description>
    <label>Claim Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>