force-app/main/default/objects/dcp_Claim_Item__c/fields/dcp_Make__c.field-meta.xml
<CustomField>
    <fullName>dcp_Make__c</fullName>
    <description>Captures the Make of a Claimed Item</description>
    <label>Make</label>
    <length>40</length>
    <type>Text</type>
</CustomField>