force-app/main/default/objects/dcp_Claim_Item__c/fields/dcp_Model__c.field-meta.xml
<CustomField>
    <fullName>dcp_Model__c</fullName>
    <description>Captures the Model of a Claimed Item</description>
    <label>Model</label>
    <length>40</length>
    <type>Text</type>
</CustomField>