force-app/main/default/objects/dcp_Claim_Item__c/fields/dcp_Original_Cost__c.field-meta.xml
<CustomField>
    <fullName>dcp_Original_Cost__c</fullName>
    <description>Captures the Original Cost of Claimed Item</description>
    <label>Original Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>