force-app/main/default/objects/dcp_Claim_Item__c/fields/dcp_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>dcp_Payment_Status__c</fullName>
    <description>Captures whether a Claim Item is unpaid or paid</description>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unpaid</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>