force-app/main/default/objects/dcp_Claim_Item__c/fields/dcp_Type__c.field-meta.xml
<CustomField>
    <fullName>dcp_Type__c</fullName>
    <description>Captures the Type of Claimed Item</description>
    <label>Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>