force-app/main/default/objects/dcp_Claim_Item__c/fields/Document_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Date__c</fullName>
    <description>Date Field used in payment report - not to be used in UI</description>
    <formula>TEXT(DAY(TODAY()))+&quot;.&quot; +TEXT(MONTH(TODAY()))+&quot;.&quot; +TEXT(YEAR(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Date</label>
    <type>Text</type>
</CustomField>