force-app/main/default/objects/dcp_Claim_Item__c/fields/Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>Posting_Date__c</fullName>
    <description>Used in reporting - not to be used in UI</description>
    <formula>TEXT(DAY(TODAY()))+&quot;.&quot; +TEXT(MONTH(TODAY()))+&quot;.&quot; +TEXT(YEAR(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Posting Date</label>
    <type>Text</type>
</CustomField>